test/files/neg/t4989.check
t4989.scala:14: error: method print in class A cannot be directly accessed from class C because class B redeclares it as abstract
  override def print(): String = super.print() // should be an error
                                       ^
t4989.scala:18: error: method print in class A cannot be directly accessed from trait T because class B redeclares it as abstract
  override def print(): String = super.print() // should be an error
                                       ^
two errors found
